plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.ham'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'

//    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'


//    oauth2
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'


    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'


//	lombok
    implementation 'org.projectlombok:lombok'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
//	thymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
// spring data jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //MapStruct
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'


    //quartz library(Scheduler)
    implementation 'org.springframework.boot:spring-boot-starter-quartz'


    //Spring Session Library for JDBC
//    implementation 'org.springframework.session:spring-session-jdbc'

    //Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    //Spring Session Library for Redis
    implementation 'org.springframework.session:spring-session-data-redis'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'


    //AWS S3 SDK, versionCheck 2024-08-19
    implementation 'software.amazon.awssdk:s3:2.27.7'

    implementation 'software.amazon.awssdk:cloudfront:2.27.7'


    //Query DSl setting
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    //Srping batch
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    testImplementation 'org.springframework.batch:spring-batch-test'


}


tasks.named('test') {
    useJUnitPlatform()
}

    // Delete QueryDSL generated files during clean build
clean {
    delete file('src/main/generated')
}